Fix overflowing pool button

--- a/src/client/scss/sections/pools.scss
+++ b/src/client/scss/sections/pools.scss
@@ -228,7 +228,6 @@
   }
 }
 .pool_links {
-  width: 100%;
   margin-top: 15px;
   padding: 0 20px;
   display: flex;
